2018-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: Fixup error in last modification.
	* Source/GSString.m: Add method to reliably get a GSUnicodeString
	* Tests/base/NSString/test00.m: Fix tests to properly check range
	searches using all combinations of 8bit and 16bit representation
	strings.

2018-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: Fix boundary checks searching for unicode strings.

2018-02-16  Yavor Doganov  <yavor@gnu.org>

	* Tests/base/NSNumberFormatter/basic10_4.m: Extend test expression
	to fix test failure with ICU 60.2.

2018-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Fix strncat length limits.

2018-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: fix missing fieldwidth specified in fscanf call

2018-02-09  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSXMLElement.m(-addAttribute:): Correct linear list code
	for name spaces. This fixes the last remaining Coverity issue.

2018-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.h
	* Source/NSUnarchiver.h
	Improve checks for loss of data converting sizes of scalar types.

2018-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSAttributedString.m: remove a little dead code
	* Tests/base/NSMutableAttributedString/test00.m: add sanity checks
	* Tests/base/NSMutableAttributedString/test01.m: add sanity checks
	* Source/GSString.m: raise exception on character conversion failure
	* Source/NSNumberFormatter.m: remove dead code
	* Source/NSPropertyList.m: avoid warnings using cast to void
	* Source/NSMessagePortNameServer.m: added security checks
	* Source/NSDecimal.m: tweak underflow setting for negative numbers
	* Tools/AGSHtml.m: remove useless test

2018-02-07  Yavor Doganov  <yavor@gnu.org>

	* Source/NSPortMessage.m (sendBeforeDate:): Invoke
	-sendBeforeDate:msgid:components:from:reserved: so that the value
	of _msgid is taken into account.